//
//  TaskFilter.swift
//  TaskManager
//
//  Created by PujaRaj on 26/02/25.
//


enum TaskFilter: String, CaseIterable {
    case all = "All"
    case completed = "Completed"
    case pending = "Pending"
}


